<resources>
    <string name="app_name">No Wrong Answers</string>

    <!-- Accessibility -->
    <string name="accessibility_go_back">Go back</string>

    <!-- Menu -->
    <string name="play">Play</string>
    <string name="load">Continue</string>

    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="more_games">More games</string>

    <string name="choose_mode">Choose mode</string>
    <string name="dark_mode">Dark mode</string>
    <string name="light_mode">Light mode</string>
    <string-array name="lightning_modes">
        <item>Dark mode</item>
        <item>Light mode</item>
        <item>System mode</item>
    </string-array>

    <!-- Choose Profile -->
    <string name="choose_profile">Choose profile</string>
    <string name="profile">%1$d/%2$d questions</string>
    <string name="profile_created_at">Last played: %1$s</string>

    <!-- Game -->
    <string name="game_next">Next question</string>
    <string name="game_over">Congratulations!</string>
    <string name="game_over_message">You’ve managed to get to the end!</string>
    <string name="game_exit">Exit</string>
    <string name="rate_to_help_us">Write review to help us grow</string>
</resources>