<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/main_menu_logo_size"
            android:layout_height="@dimen/main_menu_logo_size"
            android:layout_margin="@dimen/screen_margin"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_launcher_foreground"
            app:tint="?colorPrimary" />

        <TextView
            android:id="@+id/text_view_app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/screen_margin"
            android:layout_marginBottom="@dimen/main_menu_title_bottom_margin"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.Material3.DisplayMedium"
            android:textColor="?colorSecondary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/main_menu_button_margin"
            android:text="@string/play"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_load"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/main_menu_button_margin"
            android:layout_marginTop="@dimen/views_margin_small"
            android:text="@string/load"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/screen_margin">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_share"
                style="@style/Chip.Assist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share"
                app:chipIcon="@drawable/ic_share" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_rate"
                style="@style/Chip.Assist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate"
                app:chipIcon="@drawable/ic_rate" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_day_night"
                style="@style/Chip.Assist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:chipIcon="@drawable/ic_dark_mode"
                tools:text="@string/dark_mode" />

        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/screen_margin">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_more_games"
                style="@style/Chip.Assist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more_games"
                app:chipIcon="@drawable/ic_more_games" />

        </com.google.android.material.chip.ChipGroup>
    </LinearLayout>
</ScrollView>
